Ignore some large files.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ output
 *.pyc
 src/understanding-video.mp4
 src/understanding-video-compact.mp4
+src/Bau-davidbau-PhD-EECS-2021-thesis.pdf
+src/davidbau-defense-slides.pptx
+src/davidbau-defense-video.mp4
